comment optional part

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,16 +153,16 @@ services:
 
 ########### optional ##############
   # nginx
-  nginx:
-   container_name: nginx_guacamole_compose
-   restart: always
-   image: nginx:latest
-   volumes:
-   - ./nginx/templates:/etc/nginx/templates:ro
-   - ./nginx/ssl/self.cert:/etc/nginx/ssl/self.cert:ro
-   - ./nginx/ssl/self-ssl.key:/etc/nginx/ssl/self-ssl.key:ro
-   ports:
-   - 8443:443
-   networks:
-     - guacnetwork_compose
+  # nginx:
+  #  container_name: nginx_guacamole_compose
+  #  restart: always
+  #  image: nginx:latest
+  #  volumes:
+  #  - ./nginx/templates:/etc/nginx/templates:ro
+  #  - ./nginx/ssl/self.cert:/etc/nginx/ssl/self.cert:ro
+  #  - ./nginx/ssl/self-ssl.key:/etc/nginx/ssl/self-ssl.key:ro
+  #  ports:
+  #  - 8443:443
+  #  networks:
+  #    - guacnetwork_compose
 ####################################################################################
